# oop

./: .gitignore  README.md
lw1/task1/: CMakeLists.txt  expected-output-file-when-join-multiline-and-oneline.txt  expected-output-file-when-join-multiline-multiline2.txt  expected-output-file-when-join-oneline-multiline-and-multiline2.txt  expected-output-when-incorrect-amount-arguments.txt  main.cpp  test.bat
lw1/task2/: CMakeLists.txt  expected-output-when-incorrect-amount-arguments.txt  expected-output-when-incorrect-value-arguments.txt  main.cpp  test.bat
lw1/task3/: CMakeLists.txt  expected-output-when-incorrect-amount-arguments.txt  expected-output-when-input-file-is-missing.txt  expected-output-when-multiplying-matrixes.txt  expected-output-when-multiplying-zero-matrix.txt  main.cpp  matrix1.txt  matrix2.txt  matrix2x2.txt  matrix4x4.txt  test.bat
lw1/task4/: CMakeLists.txt  expected-output-when-incorrect-amount-arguments.txt  expected-output-when-input-256-same-chars.txt  expected-output-when-input-257-same-chars.txt  expected-output-when-odd-bites-for-unpack.txt  expected-output-when-output-file-is-busy.txt  expected-output-when-simple-packing.txt  expected-output-when-unknown-command.txt  input-255-chars.txt  input-257-chars.txt  input-odd-bites-data-for-unpack.txt  input-zero-counter-bites-data-for-unpack.txt  main.cpp  test.bat
lw1/task5/: CMakeLists.txt  expected-output-filling-inside-borders.txt  expected-output-filling-inside-broken-borders.txt  main.cpp  (+8 more)
lw2/task2/tests/: CMakeLists.txt  tests.cpp
lw2/task4/tests/: CMakeLists.txt  tests.cpp
(+34 files in other folders)
